# whisper-chess

./: LICENSE  README.md  pyproject.toml
utils/: board_to_tensor.py
