[tool.poetry]
name = "whisper-chess"
version = "0.1.0"
description = ""
authors = ["ingoseckelmann"]
readme = "README.md"

[tool.poetry.dependencies]
chess = "^1.11.1"
pendulum = "^3.0.0"
pre-commit = "^4.0.1"
python = "^3.11"
ruff = "^0.8.4"
torch = "^2.5.1"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
